- Enabled Lambda Proxy Integration for proper JSON structure.
- Updated dashboard to use AWS_API_URL from secrets.

------------------------------------------------------------
C. Response Handling & Error Logging
------------------------------------------------------------
- Improved debug logs for empty/malformed chatbot responses.
- Adjusted parsing logic for Claude message formats.

============================================================
6. DATA PIPELINE FIXES (FROM CI/CD HISTORY)
============================================================

------------------------------------------------------------
A. Date Handling Corrections
------------------------------------------------------------
Multiple commits fixed:
- Ensuring published_date stored as datetime.
- Correcting deletion query to use published_date.
- Fixing highlight logic to handle date comparisons correctly.
- Implementing robust cleanup logic for old articles.

------------------------------------------------------------
B. Step Function Invocation & Template Fixes
------------------------------------------------------------
- Corrected IAM policy formatting.
- Fixed Step Function → Lambda permission errors.
- Corrected MemorySize typo in template.yaml.
- Rolled back faulty deployments as needed.

============================================================
7. AUTOMATIC ARTICLE HIGHLIGHTING
============================================================
Added boolean “highlight” field. Scoring:
- 60% keyword weight
- 40% occurrence_count weight (normalized)
Top 5 per category marked highlight=true.

============================================================
8. CI/CD PIPELINE EVOLUTION
============================================================
- Automatic Step Function trigger after deployment.
- 31 workflow runs validating CI/CD stability.
- Repo cleanup: README updates, App Guide, .gitignore improvements.

============================================================